# musicboy

./: .gitignore  Dockerfile  README.md  bot.py  compose.yml  launcher.py  pyproject.toml
musicboy/: bot.py  constants.py  context.py  database.py  metadata.py  playlist.py  progress.py  threads.py
musicboy/commands/: playback.py
musicboy/sources/youtube/: download_song.py  youtube.py
