[project]
name = "musicboy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncer>=0.0.8",
    "discord-py[voice]>=2.4.0",
    "python-dotenv>=1.0.1",
    "typing-extensions>=4.12.2",
    "yt-dlp>=2024.11.4",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "isort>=5.13.2",
]
